welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ';' expected but 'return' found.
  if (negative==true){if (a<0){if (b<0){return true}}return false};
                                                     ^